Улучшение кнопки "Изменить" и "Удалить". Добавлен скрип бд

--- a/SrezShend/App.config
+++ b/SrezShend/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="MaterialEntities" connectionString="metadata=res://*/MaterialsModel.csdl|res://*/MaterialsModel.ssdl|res://*/MaterialsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pcsqlstud01;initial catalog=10180035;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MaterialEntities" connectionString="metadata=res://*/MaterialsModel.csdl|res://*/MaterialsModel.ssdl|res://*/MaterialsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=10180032;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
