--- a/project/SrezShend/SrezShend.csproj
+++ b/project/SrezShend/SrezShend.csproj
@@ -88,6 +88,8 @@
       <DependentUpon>MaterialsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Moduel\DB.cs" />
+    <Compile Include="Moduel\Material.cs" />
+    <Compile Include="Moduel\Supplier.cs" />
     <Compile Include="Pages\PageAddMat.xaml.cs">
       <DependentUpon>PageAddMat.xaml</DependentUpon>
     </Compile>
@@ -119,9 +121,6 @@
       <DependentUpon>MaterialsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Supplier.cs">
-      <DependentUpon>MaterialsModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SupplierType.cs">
       <DependentUpon>MaterialsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagrams.cs">
