Добавлена система переключений страниц в ListBox-е.

--- a/project/SrezShend/SrezShend.csproj
+++ b/project/SrezShend/SrezShend.csproj
@@ -73,6 +73,7 @@
     <Compile Include="AgentType.cs">
       <DependentUpon>MaterialsModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Switcher.cs" />
     <Compile Include="Material.cs">
       <DependentUpon>MaterialsModel.tt</DependentUpon>
     </Compile>
@@ -243,5 +244,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
